Analisis Lexico
Primera revision del analisis lexico para IntroLua. Valida y separa tokens sin depender fuertemente de los espacios, valida cadinas con comillas dobles.