@@ -1,15 +1,14 @@
 package com.introcode.automatas;
 
-import java.util.Arrays;
+import com.introcode.entity.Alfabeto;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 
 public class ANumeros extends AFD {
+
 	public ANumeros() {
-		char[] numeros = { '0', '1', '2', '3', '4', '5', '6', '7', '8', '9' };
-		Set<Integer> finales = new HashSet<>(Arrays.stream(new int[] { 1, 3 }).boxed().toList());
+		Set<Integer> finales = Set.of(1,3);
 		Map<Integer, Map<Character, Integer>> tabla = new HashMap<>();
 
 		tabla.put(0, new HashMap<>());
@@ -25,7 +24,7 @@ public class ANumeros extends AFD {
 		Map<Character, Integer> mapaS2 = tabla.get(2);
 
 		Map<Character, Integer> mapaS3 = tabla.get(3);
-		for (char c : numeros) {
+		for (char c : Alfabeto.DIGITOS) {
 			mapaS0.put(c, 1);
 			mapaS1.put(c, 1);
 			mapaS2.put(c, 3);
@@ -35,7 +34,7 @@ public class ANumeros extends AFD {
 	}
 
 	/**
-	 * 
+	 *
 	 * @param input
 	 * @param flag
 	 * @return -1 si no es valido, 1 si es entero y 3 si es real
@@ -44,8 +43,10 @@ public class ANumeros extends AFD {
 		int current = this.getInitialState();
 
 		for (char c : input.toCharArray()) {
-			if (!transitions.containsKey(current) ||
-					!transitions.get(current).containsKey(c)) {
+			if (
+				!transitions.containsKey(current) ||
+				!transitions.get(current).containsKey(c)
+			) {
 				return -1;
 			}
 			int next = transitions.get(current).get(c);
